[package]
name = "tss-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Data ingestion: CSV loading, metadata handling, and domain discovery"

[lints]
workspace = true

[dependencies]
polars.workspace = true
tss-standards = { path = "../tss-standards" }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
