[package]
name = "tss-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Data ingestion: CSV loading, metadata handling, and domain discovery"

[lints]
workspace = true

[dependencies]
# Workspace dependencies (alphabetical)
polars.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

# Path dependencies (alphabetical)
tss-standards = { path = "../tss-standards" }

[dev-dependencies]
tempfile.workspace = true
