[package]
name = "tss-map"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Fuzzy column-to-variable mapping engine"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
rapidfuzz = "0.5.0"
serde.workspace = true
serde_json.workspace = true
tss-model = { path = "../tss-model" }

[dev-dependencies]
tss-standards = { path = "../tss-standards" }
