[package]
name = "tss-persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Persistent storage for Trial Submission Studio projects (.tss files)"

[lints]
workspace = true

[dependencies]
# Workspace dependencies (alphabetical)
chrono.workspace = true
hex.workspace = true
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# Path dependencies (alphabetical)
tss-submit = { path = "../tss-submit" }

[dev-dependencies]
tempfile.workspace = true
