[package]
name = "tss-standards"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CDISC standards types and loaders for SDTM, ADaM, and SEND"

[lints]
workspace = true

[dependencies]
# Workspace dependencies (alphabetical)
csv.workspace = true
polars.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
