[package]
name = "tss-submit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CDISC submission preparation: mapping, normalization, validation, and export"

[lints]
workspace = true

[dependencies]
# Workspace dependencies (alphabetical)
anyhow.workspace = true
chrono.workspace = true
polars.workspace = true
quick-xml.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
xportrs.workspace = true

# External dependencies (alphabetical)
rapidfuzz = "0.5.0"
regex = "1.12.2"

# Path dependencies (alphabetical)
tss-standards = { path = "../tss-standards" }

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
