[package]
name = "tss-transform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Data-driven, variable-level transformation system for CDISC standards"

[lints]
workspace = true

[dependencies]
# Workspace crates
tss-common = { path = "../tss-common" }
tss-model = { path = "../tss-model" }

# Core dependencies
chrono.workspace = true
polars.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
