[package]
name = "tss-updater-helper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "macOS update helper for Trial Submission Studio"
license.workspace = true

# Only build on macOS
[target.'cfg(target_os = "macos")'.dependencies]
serde = { workspace = true }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dependencies]
# Empty for non-macOS platforms (binary will be a no-op)
