[package]
name = "tss-updater-helper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "macOS update helper for Trial Submission Studio"
license.workspace = true

[dependencies]
# Empty for non-macOS platforms (binary will be a no-op)

# Only build on macOS
[target.'cfg(target_os = "macos")'.dependencies]
# Workspace dependencies (alphabetical)
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
